--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -1,6 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Add Car Form</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        input[type="number"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="submit"] {
+            background-color: #3498db;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #2980b9;
+        }
+    </style>
+</head>
+<body>
+
 <form action="/cars/add/" method="post">
     {% csrf_token %}
-    {{ form.as_p  }}
-    <input type="submit" value="ADD">
+    
+    <label for="id_make">Brand:</label>
+    {{ form.model }}
+    
+    <label for="id_model">Model:</label>
+    {{ form.brand }}
+    
+    <label for="id_year">Year:</label>
+    {{ form.year }}
+    
+    
+    <input type="submit" value="Add Car">
 </form>
+
+</body>
+</html>
 
