--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
-<html lang=" en ">
+<html lang="en">
 <head>
-<title>{% block title %}Django LAB{% endblock %}</title>
+    <title>{% block title %}Django LAB{% endblock %}</title>
+    <!-- Dodaj linki do plików Bootstrapa (możesz użyć CDN) -->
+    <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"  crossorigin="anonymous">
+	<!-- Dodaj skrypty JavaScript Bootstrapa (możesz użyć CDN) -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity= " sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<style>
+        .custom-btn {
+            margin-top: 550px; /* Odsunięcie od górnego panelu */
+            animation: bounce 1s infinite; /* Animacja "bounce" przez 1 sekundę, nieskończoność razy */
+			height: 400px;
+			display: flex;
+			justify-content: center; /* Wyśrodkowanie tekstu w poziomie */
+			align-items: center; /* Wyśrodkowanie tekstu w pionie */
+			font-size: 48px;
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-20px);
+            }
+            60% {
+                transform: translateY(-10px);
+            }
+        }
+    </style>
 </head>
 <body>
-	<a href="/">Home</a>
-	<a href="/news/">News</a>
-	{% if user.is_authenticated %}
-	<a href="/cars/">Cars</a>
-	{% endif %}
-	{% if user.is_authenticated %}
-	<a href="/logout/">Logout</a>
-	{% endif %}
-	{% if not user.is_authenticated %}
-	<a href="/login/">Login</a>
-	{% endif %}
-	{% block content %}{% endblock %}
+
+<!-- Dodaj klasę "container" dla odpowiednich marginesów -->
+<div class="container">
+	<div class = "row">
+    <!-- Dodaj nawigację Bootstrapa -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Home</a>
+        <a class="navbar-brand" href="/news/">News</a>
+
+        {% if user.is_authenticated %}
+            <a class="navbar-brand" href="/cars/">Cars</a>
+            <a class="navbar-brand" href="/logout/">Logout</a>
+        {% else %}
+            <a class="navbar-brand" href="/login/">Login</a>
+        {% endif %}
+    </nav>
+<div class = "row">
+<a href="/news" button type="button" class="btn btn-success custom-btn btn-lg"> Show news </button>
 </body>
 </html>
