--- a/templates/news/add.html
+++ b/templates/news/add.html
@@ -1,6 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Add News Form</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="submit"] {
+            background-color: #e74c3c;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #c0392b;
+        }
+    </style>
+</head>
+<body>
+
 <form action="/news/add/" method="post">
     {% csrf_token %}
-    {{ form.as_p  }}
-    <input type="submit" value="ADD">
+    
+    <label for="id_topic">Topic:</label>
+    {{ form.topic }}
+    
+    <label for="id_text">Content:</label>
+    {{ form.text }}
+	
+	 <label for="id_content">Author:</label>
+    {{ form.author }}
+    
+    <input type="submit" value="Add News">
 </form>
+
+</body>
+</html>
 
