--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang=" en ">
 <head>
-<title>{% block title %}Django LAB{% endblock %}</title>
+    <title>{% block title %}Django LAB + CSS{% endblock %}</title>
+    <!-- Dodaj linki do plików Bootstrapa (możesz użyć CDN) -->
+    <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"  crossorigin="anonymous">
+	<!-- Dodaj skrypty JavaScript Bootstrapa (możesz użyć CDN) -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity= " sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-	<a href="/">Home</a>
-	{% if user.is_authenticated %}
-	<a href="/cars/">Cars</a>
-	{% endif %}
-	{% if user.is_authenticated %}
-	<a href="/logout/">Logout</a>
-	{% endif %}
-	{% if not user.is_authenticated %}
-	<a href="/login/">Login</a>
-	{% endif %}
-	{% block content %}{% endblock %}
-	{% if news %}
-    <ul>
-    {% for n in news %}
-    <li><a href="/news/{{ n.id }}/">{{ n.topic }}</a></li>
-    {% endfor %}
-    </ul>
-	{% else %}
-		<p>No news are available.</p>
-	{% endif %}
+<div class="container">
 
+    <!-- Dodaj nawigację Bootstrapa -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Home</a>
+
+        {% if user.is_authenticated %}
+            <a class="navbar-brand" href="/cars/">Cars</a>
+            <a class="navbar-brand" href="/logout/">Logout</a>
+        {% else %}
+            <a class="navbar-brand" href="/login/">Login</a>
+        {% endif %}
+    </nav>
+
+
+    {% if news %}
+		<div class = "card">
+			<div class = "card-header bg-info text-white">
+				<h5> Latest news</h5>
+			</div>
+			<div class="card-body">
+				<ul class="list-group">
+					{% for n in news %}
+						<li class="list-group-item">
+							<a href="/news/{{ n.id }}/">{{ n.topic }}</a></li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+    {% else %}
+        <p class="text-muted mt-3">No news are available.</p>
+    {% endif %}
+	
+	
+<div class="row">
 	{% if user.is_authenticated %}
-	<a href="/news/add/">Add news</a>
+	<a href="/news/add" button type="button" class="btn btn-primary"><i class="fas fa-plus"></i> Add news </button>
 	{% endif %}
-	
-	
 </body>
 </html>
